# hctsa

./: .gitignore  .gitmodules  LICENSE.txt  README.md  TSQ_brawn_masterloop.m  TSQ_updatepath.m  UCR_umap.html  git-archive-all.sh  index.html  install.m  params.json  readme.txt  runscript_sample.m  startup.m
Toolboxes/Tisean_3.0.1/: INSTALL  Makefile  Makefile.in  README  bins.sh  config.cache  config.status  configure  configure.in  configure.scan  false_nearest.patch  grep.exe.stackdump  index.html  logo  test.f
Toolboxes/Tisean_3.0.1/bentut2/: amplitude.dat.ar  amplitude.dat.ar.cor  amplitude.dat.ar_sp  amplitude.dat.fnn  amplitude.dat_sp
Toolboxes/Tisean_3.0.1/bentut3/: amplitude.dat.his  amplitude.dat.ll  amplitude.dat.nsz  amplitude.dat.poin  arch.dat.fnn  arch.dat.nsz
Toolboxes/Tisean_3.0.1/bentut4/: amplitude.dat.c2  amplitude.dat.d2  amplitude.dat.d2.av  amplitude.dat.h2  amplitude.dat.stat
Toolboxes/Tisean_3.0.1/docs/: alphabetical.html  changes.html  contents.html  general.html  indexf.html  install.html  problems.html  quick.html
Toolboxes/Tisean_3.0.1/docs/chaospaper/: TiseanHTML.css  TiseanHTML.html  citation.html  node1.html  node10.html  node11.html  node12.html  node13.html  node14.html  node15.html  node16.html  node17.html  node18.html  node19.html  node2.html  node20.html  node21.html  node22.html  node23.html  node24.html  node25.html  node26.html  node27.html  node28.html  node29.html  node3.html  node30.html  node31.html  node32.html  node33.html  node34.html  node35.html  node36.html  node37.html  node38.html  node39.html  node4.html  node40.html  node41.html  node42.html  (+6 more)
Toolboxes/Tisean_3.0.1/docs/docs_c/: ar-model-eq1.tex  ar-model.html  arima-model.html  av-d2.html  boxcount.html  causality.html  changes.html  corr.html  d2.html  delay.html  extrema.html  false_nearest.html  fsle.html  ghkss.html  histogram.html  lfo-ar.html  lfo-run.html  lfo-test.html  low121.html  lyap_k.html  lyap_r.html  lyap_spec.html  lzo-gm.html  lzo-run.html  lzo-test.html  makenoise.html  mem_spec.html  mutual.html  nrlazy.html  nstat_z.html  pca.html  poincare.html  polyback.html  polynom.html  polynomp.html  polypar.html  rand.html  rbf.html  recurr.html  resample.html  (+6 more)
Toolboxes/Tisean_3.0.1/docs/docs_f/: addnoise.html  ar-run.html  autocor.html  c1.html  c2d.html  c2g.html  c2naive.html  c2t.html  changes.html  choose.html  cluster.html  compare.html  delay.html  endtoend.html  events.html  henon.html  ikeda.html  intervals.html  lazy.html  lorenz.html  notch.html  pc.html  predict.html  project.html  randomize.html  randomize_auto.html  randomize_cool.html  randomize_cost.html  randomize_extend.html  randomize_perm.html  randomize_spike.html  randomize_uneven.html  rms.html  spectrum.html  spikeauto.html  spikespec.html  stp.html  surrogates.html  test.html  timerev.html  (+5 more)
Toolboxes/Tisean_3.0.1/docs/surropaper/: Surrogates.html  footnode.html  node1.html  node10.html  node11.html  node12.html  node13.html  node14.html  node15.html  node16.html  node17.html  node18.html  node19.html  node2.html  node20.html  node21.html  node22.html  node23.html  node24.html  node25.html  node26.html  node27.html  node28.html  node29.html  node3.html  node30.html  node31.html  node32.html  node33.html  node34.html  node35.html  node36.html  node37.html  node4.html  node5.html  node6.html  node7.html  node8.html  node9.html
Toolboxes/Tisean_3.0.1/docs/tutorial/: answer_intermittent.html  ex1.html  ex2.html  ex3.html  ex3_answer1.html  ex3_answer2.html  ex4.html  exercises.html  henon.gnu  trouble1.html
Toolboxes/Tisean_3.0.1/examples/: c1.gnu  d2.gnu  lazy.gnu  project.gnu  randomize.gnu  surrogates.gnu  upo.gnu
Toolboxes/Tisean_3.0.1/source_c/: Makefile  Makefile.in  ar-model  ar-model.c  arima-model  arima-model.c  av-d2  av-d2.c  boxcount  boxcount.c  corr  corr.c  d2  d2.c  delay  delay.c  extrema  extrema.c  false_nearest  false_nearest.c  fsle  fsle.c  ghkss  ghkss.c  histogram  histogram.c  lfo-ar  lfo-ar.c  lfo-run  lfo-run.c  lfo-test  lfo-test.c  low121  low121.c  lyap_k  lyap_k.c  lyap_r  lyap_r.c  lyap_spec  lyap_spec.c  (+43 more)
Toolboxes/Tisean_3.0.1/source_c/new/: arima-model.c
Toolboxes/Tisean_3.0.1/source_c/routines/: Makefile  Makefile.in  arima.tgz  check_alloc.c  check_option.c  eigen.c  exclude_interval.c  find_multi_neighbors.c  find_neighbors.c  get_multi_series.c  get_series.c  invert_matrix.c  make_box.c  make_multi_box.c  make_multi_box2.c  make_multi_index.c  myfgets.c  rand.c  rand_arb_dist.c  rescale_data.c  scan_help.c  search_datafile.c  solvele.c  test_outfile.c  tisean_cec.h  tsa.h  variance.c  what_i_do.c
Toolboxes/Tisean_3.0.1/source_f/: ._any_s.f  ._henon.f  ._ikeda.f  ._wiener1.f  ._xc2.f  Makefile  Makefile.in  Makefile~  addnoise  addnoise.f  any_s.f  ar-run  ar-run.f  arguments.f  autocor  autocor.f  c1  c1.f  c1.f~  c2d  c2d.f  c2g  c2g.f  c2naive  c2naive.f  c2t  c2t.f  choose  choose.f  cluster  cluster.f  commandline.f  compare  compare.f  d1.f  endtoend  endtoend.f  events  events.f  gpl.txt  (+59 more)
Toolboxes/Tisean_3.0.1/source_f/randomize/: Makefile  Makefile.in  randomize.f  randomize_auto_exp_random  randomize_autop_exp_random  randomize_spikeauto_exp_random  randomize_spikespec_exp_event  randomize_uneven_exp_random
Toolboxes/Tisean_3.0.1/source_f/slatec/: Makefile  Makefile.in  chkder.f  d1mach.f  dqk15.f  enorm.f  fdjac3.f  i1mach.f  j4save.f  lmpar.f  pythag.f  qrfac.f  qrsolv.f  r1mach.f  radb2.f  radb3.f  radb4.f  radb5.f  radbg.f  radf2.f  radf3.f  radf4.f  radf5.f  radfg.f  rand.f  rfftb1.f  rfftf1.f  rffti1.f  rgauss.f  rs.f  rwupdt.f  snls1.f  (+7 more)
Toolboxes/Tisean_3.0.1/unsupported/: arguments.c  arguments.h  autocor3.c  autocor3.html  c2.f  c2.html  clean.c  clean.h  d2.c  d2.html  delay.cc  delay.html  delay_tisean2.1.f  dft.c  dft.h  eigen.c  eigen.h  generic.f  histogram.cc  histogram.html  histogram_tisean2.1.c  lyap.f  lyap_k.cc  lyap_k.html  lyapunov.f  lyapunov.gnu  lyapunov.html  make_ps.cc  make_ps.html  noise.c  noise.gnu  noise.html  primes.h  rand.c  rand.h  randomize_cost.html  rank.c  rank.h  readfile.f  sing.c  (+9 more)
(+3912 files in other folders)
